--- a/protest_detection/Inference_in_frames.ipynb
+++ b/protest_detection/Inference_in_frames.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6d830261",
+   "execution_count": 2,
+   "id": "717c8931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +12,16 @@
     "import torchvision.transforms as transforms\n",
     "from torchvision.models import resnet50, ResNet50_Weights\n",
     "\n",
-    "from IPython import display\n",
-    "from IPython.display import clear_output\n",
-    "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import yaml\n",
+    "from fastparquet import write\n",
+    "\n",
     "import os\n",
     "import glob as glob\n",
-    "import requests\n",
-    "import cv2\n",
     "\n",
+    "import cv2\n",
     "from PIL import Image\n",
-    "import numpy as np\n",
+    "\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -33,17 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f0014557",
+   "id": "edd5100b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model ready\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class FinalLayer(nn.Module):\n",
     "    \"\"\"Modified last layer for resnet50 for your dataset\"\"\"\n",
@@ -78,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05e5732b",
+   "id": "db896509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b38a4b2",
+   "id": "859f7dd2",
    "metadata": {},
    "source": [
     "#### Accessing images"
@@ -99,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "39e1b6ca",
+   "execution_count": 24,
+   "id": "e997f94b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +120,6 @@
     "def run_detection_directory(path_to_res_file:str, country:str, test_data_dir: str):\n",
     "    c = 0\n",
     "    f = 0\n",
-    "    data = []\n",
     "    \n",
     "    # File to store the results (parqur file)\n",
     "    file_path = path_to_res_file+f'results_{country}.parquet'\n",
@@ -167,9 +154,18 @@
     "                frame_name = parts[-1]\n",
     "                \n",
     "                # Append the data to the list\n",
-    "                data.append([channel_name, video_name, frame_name] + output_list)\n",
+    "                #data.append([channel_name, video_name, frame_name] + output_list)\n",
     "            \n",
-    "                \n",
+    "                # Write the labels to a data frame\n",
+    "                aux = [channel_name, video_name, frame_name] + output_list\n",
+    "                data = [aux]\n",
+    "                df = pd.DataFrame(data, columns=['Channel', 'Video', 'Frame', \"protest\", \"violence\", \"sign\", \"photo\", \"fire\", \"police\", \"children\", \"group_20\", \"group_100\", \"flag\", \"night\", \"shouting\"])\n",
+    "                       \n",
+    "                # If the file does not exists, create it\n",
+    "                if not os.path.isfile(file_path): \n",
+    "                    write(file_path, df)\n",
+    "                else: # Otherwise, write on it\n",
+    "                    write(file_path, df, append=True)\n",
     "                \n",
     "                f+=1\n",
     "                if f>2:\n",
@@ -179,35 +175,29 @@
     "            if c>1:\n",
     "                break\n",
     "                    \n",
-    "                    \n",
     "    \n",
-    "    # Create a DataFrame from the collected data\n",
-    "    df = pd.DataFrame(data, columns=['Channel', 'Video', 'Frame', \"protest\", \"violence\", \"sign\", \"photo\",\n",
-    "                      \"fire\", \"police\", \"children\", \"group_20\", \"group_100\",\n",
-    "                      \"flag\", \"night\", \"shouting\"])\n",
-    "    \n",
-    "    return df"
+    "    return file_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3a13ed95",
+   "execution_count": 3,
+   "id": "d23b3f4e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tree: sweden > channel > video > frames \n",
     "\n",
     "test_swe_path = '/zpool/beast-mirror/labour-movements-mobilisation-via-visual-means/youtube_video_frames/sweden/'\n",
-    "\n",
+    "res_path = '/zpool/beast-mirror/labour-movements-mobilisation-via-visual-means/protest_derection_results/'\n",
     "# Call the function and store the resulting DataFrame\n",
-    "data_frame = run_detection_directory(test_swe_path)"
+    "#run_detection_directory(res_path, 'sweden', test_swe_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6e1d7da2",
+   "id": "93d99a32",
    "metadata": {},
    "outputs": [
     {
@@ -501,13 +491,313 @@
     }
    ],
    "source": [
-    "data_frame"
+    "#data_frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d0ff783c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Video</th>\n",
+       "      <th>Frame</th>\n",
+       "      <th>protest</th>\n",
+       "      <th>violence</th>\n",
+       "      <th>sign</th>\n",
+       "      <th>photo</th>\n",
+       "      <th>fire</th>\n",
+       "      <th>police</th>\n",
+       "      <th>children</th>\n",
+       "      <th>group_20</th>\n",
+       "      <th>group_100</th>\n",
+       "      <th>flag</th>\n",
+       "      <th>night</th>\n",
+       "      <th>shouting</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TCOSverige</td>\n",
+       "      <td>vD9AD9Mkn00</td>\n",
+       "      <td>vD9AD9Mkn00_1000.jpg</td>\n",
+       "      <td>0.000225</td>\n",
+       "      <td>0.082358</td>\n",
+       "      <td>0.968820</td>\n",
+       "      <td>0.052513</td>\n",
+       "      <td>0.000126</td>\n",
+       "      <td>0.000292</td>\n",
+       "      <td>0.105370</td>\n",
+       "      <td>0.021472</td>\n",
+       "      <td>0.000812</td>\n",
+       "      <td>0.002075</td>\n",
+       "      <td>0.001571</td>\n",
+       "      <td>0.001512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TCOSverige</td>\n",
+       "      <td>vD9AD9Mkn00</td>\n",
+       "      <td>vD9AD9Mkn00_500.jpg</td>\n",
+       "      <td>0.011258</td>\n",
+       "      <td>0.296230</td>\n",
+       "      <td>0.772745</td>\n",
+       "      <td>0.009518</td>\n",
+       "      <td>0.019400</td>\n",
+       "      <td>0.030011</td>\n",
+       "      <td>0.005413</td>\n",
+       "      <td>0.350340</td>\n",
+       "      <td>0.054107</td>\n",
+       "      <td>0.023425</td>\n",
+       "      <td>0.008701</td>\n",
+       "      <td>0.006307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TCOSverige</td>\n",
+       "      <td>vD9AD9Mkn00</td>\n",
+       "      <td>vD9AD9Mkn00_1250.jpg</td>\n",
+       "      <td>0.002343</td>\n",
+       "      <td>0.130016</td>\n",
+       "      <td>0.936888</td>\n",
+       "      <td>0.033643</td>\n",
+       "      <td>0.000915</td>\n",
+       "      <td>0.000817</td>\n",
+       "      <td>0.002302</td>\n",
+       "      <td>0.297446</td>\n",
+       "      <td>0.039660</td>\n",
+       "      <td>0.008272</td>\n",
+       "      <td>0.017428</td>\n",
+       "      <td>0.002822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TCOSverige</td>\n",
+       "      <td>9K-XapzK6Ps</td>\n",
+       "      <td>9K-XapzK6Ps_250.jpg</td>\n",
+       "      <td>0.000323</td>\n",
+       "      <td>0.165700</td>\n",
+       "      <td>0.885031</td>\n",
+       "      <td>0.021366</td>\n",
+       "      <td>0.000516</td>\n",
+       "      <td>0.001810</td>\n",
+       "      <td>0.008540</td>\n",
+       "      <td>0.753946</td>\n",
+       "      <td>0.039261</td>\n",
+       "      <td>0.007584</td>\n",
+       "      <td>0.035628</td>\n",
+       "      <td>0.002676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Boost2013</td>\n",
+       "      <td>XVEAnHeWFW8</td>\n",
+       "      <td>XVEAnHeWFW8_1250.jpg</td>\n",
+       "      <td>0.004670</td>\n",
+       "      <td>0.219886</td>\n",
+       "      <td>0.954517</td>\n",
+       "      <td>0.144653</td>\n",
+       "      <td>0.002254</td>\n",
+       "      <td>0.004844</td>\n",
+       "      <td>0.011936</td>\n",
+       "      <td>0.278515</td>\n",
+       "      <td>0.012142</td>\n",
+       "      <td>0.014497</td>\n",
+       "      <td>0.008824</td>\n",
+       "      <td>0.024927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>Lararforbundet</td>\n",
+       "      <td>0_SSqMq2sq0</td>\n",
+       "      <td>0_SSqMq2sq0_1200.jpg</td>\n",
+       "      <td>0.000619</td>\n",
+       "      <td>0.081016</td>\n",
+       "      <td>0.991842</td>\n",
+       "      <td>0.090726</td>\n",
+       "      <td>0.000083</td>\n",
+       "      <td>0.000180</td>\n",
+       "      <td>0.066205</td>\n",
+       "      <td>0.115498</td>\n",
+       "      <td>0.005357</td>\n",
+       "      <td>0.001675</td>\n",
+       "      <td>0.005137</td>\n",
+       "      <td>0.000989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>lararforbundetkarlskrona590</td>\n",
+       "      <td>w0KJNnGde8o</td>\n",
+       "      <td>w0KJNnGde8o_2400.jpg</td>\n",
+       "      <td>0.013474</td>\n",
+       "      <td>0.184807</td>\n",
+       "      <td>0.780389</td>\n",
+       "      <td>0.074723</td>\n",
+       "      <td>0.006902</td>\n",
+       "      <td>0.007025</td>\n",
+       "      <td>0.098665</td>\n",
+       "      <td>0.202513</td>\n",
+       "      <td>0.008689</td>\n",
+       "      <td>0.022039</td>\n",
+       "      <td>0.001305</td>\n",
+       "      <td>0.009016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>visionkanalen</td>\n",
+       "      <td>YP___XatUsA</td>\n",
+       "      <td>YP___XatUsA_250.jpg</td>\n",
+       "      <td>0.000467</td>\n",
+       "      <td>0.241174</td>\n",
+       "      <td>0.893859</td>\n",
+       "      <td>0.044116</td>\n",
+       "      <td>0.013640</td>\n",
+       "      <td>0.010297</td>\n",
+       "      <td>0.012991</td>\n",
+       "      <td>0.493185</td>\n",
+       "      <td>0.077919</td>\n",
+       "      <td>0.012357</td>\n",
+       "      <td>0.029812</td>\n",
+       "      <td>0.012524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>Sverigesingenjorer</td>\n",
+       "      <td>_C1IVrOa1Qg</td>\n",
+       "      <td>_C1IVrOa1Qg_1500.jpg</td>\n",
+       "      <td>0.001029</td>\n",
+       "      <td>0.223190</td>\n",
+       "      <td>0.724311</td>\n",
+       "      <td>0.044494</td>\n",
+       "      <td>0.001537</td>\n",
+       "      <td>0.005074</td>\n",
+       "      <td>0.001450</td>\n",
+       "      <td>0.726003</td>\n",
+       "      <td>0.074601</td>\n",
+       "      <td>0.054703</td>\n",
+       "      <td>0.007514</td>\n",
+       "      <td>0.004565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>facket_kommunal</td>\n",
+       "      <td>K2NZomP44MQ</td>\n",
+       "      <td>K2NZomP44MQ_5500.jpg</td>\n",
+       "      <td>0.000301</td>\n",
+       "      <td>0.270379</td>\n",
+       "      <td>0.576954</td>\n",
+       "      <td>0.040376</td>\n",
+       "      <td>0.008083</td>\n",
+       "      <td>0.013111</td>\n",
+       "      <td>0.000110</td>\n",
+       "      <td>0.469960</td>\n",
+       "      <td>0.039879</td>\n",
+       "      <td>0.054295</td>\n",
+       "      <td>0.176435</td>\n",
+       "      <td>0.008514</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>265 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Channel        Video                 Frame   protest   \n",
+       "0                     TCOSverige  vD9AD9Mkn00  vD9AD9Mkn00_1000.jpg  0.000225  \\\n",
+       "1                     TCOSverige  vD9AD9Mkn00   vD9AD9Mkn00_500.jpg  0.011258   \n",
+       "2                     TCOSverige  vD9AD9Mkn00  vD9AD9Mkn00_1250.jpg  0.002343   \n",
+       "3                     TCOSverige  9K-XapzK6Ps   9K-XapzK6Ps_250.jpg  0.000323   \n",
+       "4                      Boost2013  XVEAnHeWFW8  XVEAnHeWFW8_1250.jpg  0.004670   \n",
+       "..                           ...          ...                   ...       ...   \n",
+       "260               Lararforbundet  0_SSqMq2sq0  0_SSqMq2sq0_1200.jpg  0.000619   \n",
+       "261  lararforbundetkarlskrona590  w0KJNnGde8o  w0KJNnGde8o_2400.jpg  0.013474   \n",
+       "262                visionkanalen  YP___XatUsA   YP___XatUsA_250.jpg  0.000467   \n",
+       "263           Sverigesingenjorer  _C1IVrOa1Qg  _C1IVrOa1Qg_1500.jpg  0.001029   \n",
+       "264              facket_kommunal  K2NZomP44MQ  K2NZomP44MQ_5500.jpg  0.000301   \n",
+       "\n",
+       "     violence      sign     photo      fire    police  children  group_20   \n",
+       "0    0.082358  0.968820  0.052513  0.000126  0.000292  0.105370  0.021472  \\\n",
+       "1    0.296230  0.772745  0.009518  0.019400  0.030011  0.005413  0.350340   \n",
+       "2    0.130016  0.936888  0.033643  0.000915  0.000817  0.002302  0.297446   \n",
+       "3    0.165700  0.885031  0.021366  0.000516  0.001810  0.008540  0.753946   \n",
+       "4    0.219886  0.954517  0.144653  0.002254  0.004844  0.011936  0.278515   \n",
+       "..        ...       ...       ...       ...       ...       ...       ...   \n",
+       "260  0.081016  0.991842  0.090726  0.000083  0.000180  0.066205  0.115498   \n",
+       "261  0.184807  0.780389  0.074723  0.006902  0.007025  0.098665  0.202513   \n",
+       "262  0.241174  0.893859  0.044116  0.013640  0.010297  0.012991  0.493185   \n",
+       "263  0.223190  0.724311  0.044494  0.001537  0.005074  0.001450  0.726003   \n",
+       "264  0.270379  0.576954  0.040376  0.008083  0.013111  0.000110  0.469960   \n",
+       "\n",
+       "     group_100      flag     night  shouting  \n",
+       "0     0.000812  0.002075  0.001571  0.001512  \n",
+       "1     0.054107  0.023425  0.008701  0.006307  \n",
+       "2     0.039660  0.008272  0.017428  0.002822  \n",
+       "3     0.039261  0.007584  0.035628  0.002676  \n",
+       "4     0.012142  0.014497  0.008824  0.024927  \n",
+       "..         ...       ...       ...       ...  \n",
+       "260   0.005357  0.001675  0.005137  0.000989  \n",
+       "261   0.008689  0.022039  0.001305  0.009016  \n",
+       "262   0.077919  0.012357  0.029812  0.012524  \n",
+       "263   0.074601  0.054703  0.007514  0.004565  \n",
+       "264   0.039879  0.054295  0.176435  0.008514  \n",
+       "\n",
+       "[265 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_parquet(res_path+'results_sweden.parquet', engine='fastparquet')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc0442d2",
+   "id": "1f4e6264",
    "metadata": {},
    "outputs": [],
    "source": []
