Swe protest inference finished

--- a/protest_detection/testing.ipynb
+++ b/protest_detection/testing.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "733fb955",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2d59cf30",
    "metadata": {},
    "outputs": [],
@@ -84,19 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d978be23",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load your input image\n",
-    "imgpath = 'test_img/protest_image.jpg'\n",
+    "imgpath = 'test_img/cobblestone-street-with-tall-white-buildings.jpg'\n",
     "image = Image.open(imgpath)  # Replace 'your_image.jpg' with the path to your image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c9e767f7",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "2f831c0b",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "e227fe5b",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "19af299b",
    "metadata": {},
    "outputs": [
@@ -193,36 +193,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>test_img/protest_image.jpg</td>\n",
-       "      <td>0.999451</td>\n",
-       "      <td>0.47094</td>\n",
-       "      <td>0.999498</td>\n",
-       "      <td>0.021265</td>\n",
-       "      <td>0.000436</td>\n",
-       "      <td>0.003768</td>\n",
-       "      <td>0.006847</td>\n",
-       "      <td>0.979061</td>\n",
-       "      <td>0.778701</td>\n",
-       "      <td>0.044016</td>\n",
-       "      <td>0.109219</td>\n",
-       "      <td>0.016833</td>\n",
+       "      <td>test_img/cobblestone-street-with-tall-white-bu...</td>\n",
+       "      <td>0.062218</td>\n",
+       "      <td>0.263057</td>\n",
+       "      <td>0.825844</td>\n",
+       "      <td>0.005788</td>\n",
+       "      <td>0.008115</td>\n",
+       "      <td>0.010684</td>\n",
+       "      <td>0.004978</td>\n",
+       "      <td>0.805744</td>\n",
+       "      <td>0.241091</td>\n",
+       "      <td>0.021271</td>\n",
+       "      <td>0.007198</td>\n",
+       "      <td>0.002594</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      imgpath   protest  violence      sign     photo   \n",
-       "0  test_img/protest_image.jpg  0.999451   0.47094  0.999498  0.021265  \\\n",
+       "                                             imgpath   protest  violence   \n",
+       "0  test_img/cobblestone-street-with-tall-white-bu...  0.062218  0.263057  \\\n",
        "\n",
-       "       fire    police  children  group_20  group_100      flag     night   \n",
-       "0  0.000436  0.003768  0.006847  0.979061   0.778701  0.044016  0.109219  \\\n",
+       "       sign     photo      fire    police  children  group_20  group_100   \n",
+       "0  0.825844  0.005788  0.008115  0.010684  0.004978  0.805744   0.241091  \\\n",
        "\n",
-       "   shouting  \n",
-       "0  0.016833  "
+       "       flag     night  shouting  \n",
+       "0  0.021271  0.007198  0.002594  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
